[package]
name = "bb8-lapin"
version = "0.1.1-experemental"
authors = ["Adrian Benavides <adri.benavides312@gmail.com>"]
repository = "https://github.com/adrianbenavides/bb8-lapin"
description = "r2d2-lapin, but for async tokio based connections"
license = "MIT"
edition = "2018"

[dependencies]
async-trait = "0.1"
bb8 = { git = "https://github.com/speechki-book/bb8", branch = "0.5.1"}
lapin = "1.6.6"

[dev-dependencies]
dotenv = "0.15"
lazy_static = "1.4"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros", "time", "sync"] }
tokio-amqp = "0.1.3"
